feat: swagger + minio + started working on request handlers
