# src/catalog/internal/models/models.go
@@ -1,0 +1,53 @@
+// Package models
+package models
+
+import "time"
+
+type Author struct {
+	ID          string
+	Name        string
+	Description string
+	PhotoURL    string
+}
+
+type Book struct {
+	ID           string
+	FilePath     string
+	Title        string
+	Description  string
+	Format       string
+	Category     string
+	LanguageCode string
+	Published    time.Time
+}
+
+type Request struct {
+	ID           string
+	Filename     string
+	Title        string
+	AuthorName   string
+	Description  string
+	Format       string
+	Category     string
+	LanguageCode string
+	Added        time.Time
+}
+
+type Tag struct {
+	Name string
+}
+
+type TagToBook struct {
+	TagName   string `json:"tag_name"`
+	BookID string `json:"book_id"`
+}
+
+type TagToRequest struct {
+	TagName      string `json:"tag_name"`
+	RequestID string `json:"request_id"`
+}
+
+type AuthorToBook struct {
+	AuthorID int    `json:"author_id"`
+	BookID   string `json:"book_id"`
+}
